--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       -webkit-overflow-scrolling: touch;
     }
     #map { flex: 1; min-width: 0; } /* min-width:0 evita bugs flex */
+
     .row { margin: 12px 0; }
     label { font-weight: 600; display:block; margin-bottom: 6px; }
     input[type="range"] { width: 100%; }
@@ -38,7 +39,7 @@
     .subrow { margin-top:6px; padding-left: 10px; border-left: 3px solid #e6e6e6; }
     .disabled { opacity: .45; pointer-events: none; }
 
-    /* Tooltip un toque más legible */
+    /* Tooltip más legible */
     .leaflet-tooltip {
       border: 1px solid rgba(0,0,0,.15);
       box-shadow: 0 2px 10px rgba(0,0,0,.08);
@@ -67,7 +68,7 @@
 <div id="wrap">
   <div id="sidebar">
     <h2 style="margin:0 0 8px 0;">Mapa (Score compuesto)</h2>
-    <div class="small">Heatmap + clusters + filtros por Zona/Batería. Podés activar/desactivar Score y Cortes.</div>
+    <div class="small">PC: pasá el mouse por el pozo (tooltip). Celular: tocá el pozo (popup).</div>
 
     <div class="row">
       <label>Score por ponderaciones</label>
@@ -120,6 +121,7 @@
       <div class="small">Rangos se auto-ajustan según min/máx reales del dataset.</div>
 
       <div id="cutsPanel" class="subrow">
+
         <div class="row">
           <div class="toggle">
             <input id="cutParOn" type="checkbox" checked />
@@ -146,6 +148,7 @@
           <input id="minPto" type="range" min="-20" max="80" value="-20"/>
           <div class="small"><span id="minPtoVal">-20</span> <span class="mono" id="minPtoRange"></span></div>
         </div>
+
       </div>
     </div>
 
@@ -166,10 +169,6 @@
     <div class="row">
       <label>Estado</label>
       <div class="small">Pozos visibles: <b><span id="nVisible">0</span></b></div>
-    </div>
-
-    <div class="small" style="margin-top:8px; color:#666;">
-      Tip: en celu, tocá un punto para ver datos.
     </div>
   </div>
 
@@ -355,6 +354,7 @@ function rebuildLayers() {
   if (heatLayer) map.removeLayer(heatLayer);
   if (clusterLayer) map.removeLayer(clusterLayer);
 
+  // ✅ FIX: faltaba agregarlo al mapa
   heatLayer = L.heatLayer(heatData, {
     radius: Number(radius.value),
     blur: Number(blur.value),
@@ -378,10 +378,14 @@ function rebuildLayers() {
       </div>
     `;
 
-    // Desktop: hover. Mobile: el usuario toca y se ve igual.
-    m.bindTooltip(htmlTip, { direction:"top", sticky:true, opacity:0.95 });
+    // ✅ PC: hover
+    m.bindTooltip(htmlTip, {
+      direction: "top",
+      sticky: true,
+      opacity: 0.95
+    });
 
-    // En celular el tooltip no siempre “hover”, entonces dejamos popup en tap.
+    // ✅ Celular: tap
     m.bindPopup(htmlTip);
 
     clusterLayer.addLayer(m);
@@ -389,13 +393,12 @@ function rebuildLayers() {
 
   map.addLayer(clusterLayer);
 
-  // Ajuste vista
   if (scored.length > 0) {
     const bounds = L.latLngBounds(scored.map(r => [r.LAT, r.LON]));
     map.fitBounds(bounds, { padding: [20,20] });
   }
 
-  // ✅ mobile: asegurar que Leaflet repinte con el nuevo layout
+  // ✅ mobile: asegurar repintado
   fixMapSizeSoon();
 }
 
@@ -447,7 +450,6 @@ function initFilters() {
     map.setView([lat, lon], 9);
   }
 
-  // ✅ aseguramos tamaño correcto al cargar
   fixMapSizeSoon();
 }
 
